# LANbu-Handy

./: .flake8  .gitattributes  .gitignore  .hadolint.yaml  .pre-commit-config.yaml  .prettierignore  =0.131.0  CLAUDE.md  DEVELOPER_NOTES.md  Dockerfile  E2E_TESTING_GUIDE.md  LICENSE  MODEL_PREVIEW_TESTING_SUMMARY.md  PRINTER_MANAGEMENT.md  PWA_UI_INTERACTION_TEST_SCRIPT.md  PWA_UI_TESTING_STRATEGY.md  README.md  RELEASE_NOTES.md  SERIAL_NUMBER_GUIDE.md  TESTING_COMPLETION_SUMMARY.md  TESTING_GUIDE.md  TEST_RESULTS_REPORT.md  VIRTUAL_DISPLAY.md  cli.Dockerfile  demo_ams_fix.py  docker-compose.dev.yml  docker-compose.yml  package-lock.json  pyproject.toml  test_model.3mf  test_model.stl  test_repair_verification.py  test_virtual_display.py
.devcontainer/: Dockerfile  README.md  devcontainer.json  docker-compose.yml
.docs/: github-workflow-demo.md  initial-development-plan.md  prd.md
.github/: TAG_v0.1.0_DOCUMENTATION.md  copilot-instructions.md  copilot-setup-steps.yml
backend/: .coverage  =0.21.0  =0.25.0  requirements-dev.txt  requirements-prod.txt  requirements.txt  test_clean_code.py  test_lint_errors.py
cli-docker/: Dockerfile
data/: printers.json
docker/: Dockerfile
pwa/: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.test.json  vite.config.ts  vitest.config.ts
scripts/: README.md  bambu-studio-version.txt  demo-model-previews.sh  format-code.sh  install-bambu-studio-cli.sh  lint.sh  pre-commit-hook.sh  project-status.sh  setup-dev-environment.sh  start-dev.sh  test-dev-container.sh  test.sh  (+2 more)
(+141 files in other folders)
